Revert "Stuck while fixing inheritance problems"
This reverts commit 271bd261a0bc092f96b5541b0f3d8685c04d96bd.

--- a/src/app/MyComponents/header/header.component.scss
+++ b/src/app/MyComponents/header/header.component.scss
@@ -1,6 +1,6 @@
 .header-component{
     width: 100%;
-    height: 10%;
+    height: 90px;
     background-color: #2C3360;
     display: flex;
     align-items: center;
